--- a/public/admin.html
+++ b/public/admin.html
@@ -6,6 +6,15 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SY13YR8PER"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SY13YR8PER');
+</script>
 <style>
     /* Modal styles */
     #passwordModal {
