--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,15 @@
     <title>Club Hub</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SY13YR8PER"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SY13YR8PER');
+</script>
 <body>
     <div class="header-container">
         <h1>Welcome to Oakdale High School Club Hub</h1>
